<resources>
    <string name="hello">Welcome to Factory Mode</string>
    <string name="app_name">Factory mode</string>
    <string name="Settings">Settings</string>
    <string name="AutoTest">Auto test</string>
    <string name="AllTest">Auto test</string>
    <string name="SingleTest">Single test</string>
    <string name="FactoryReset">Factory Reset</string>
    <string name="Packageerror">Error,cannot find the packages！</string>
    <string name="PackageIerror">Internal error</string>
    <string name="BatteryLog">Battery</string>
    <string name="calibration">Calibration</string>
    <string name="battery_info_status_label">Charging status:</string>
    <string name="battery_info_scale_label">Battery level:</string>
    <string name="battery_info_level_label">Current power:</string>
    <string name="battery_info_health_label">Battery status:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Current voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Battery auto uptime:</string>
    <string name="battery_info_awake_battery">Awake battery Time:</string>
    <string name="battery_info_awake_plugged">Charging time:</string>
    <string name="battery_info_screen_on">Screen_on time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">No charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unspecified failure</string>
    <string name="TouchScreen">TouchScreen</string>
    <string name="PointTest">PointTest</string>
    <string name="LineTest">LineTest</string>
    <string name="Result">Result</string>
    <string name="Offset">Offset：</string>
    <string name="TouchComplete">TouchComplete</string>
    <string name="Error">Error</string>
    <string name="DrawError">DrawError！</string>
    <string name="Again">Again</string>
    <string name="GoOn">GoOn</string>
    <string name="BackLight">BackLight</string>
    <string name="Display_lcd_Text">Display_lcd</string>
    <string name="Memory">Memory</string>
    <string name="Audio">Audio</string>
    <string name="Camera">Camera</string>
    <string name="Camera_takepic">Taking pictures</string>
    <string name="Camera_notfound">Subcamera is not found</string>
    <string name="WiFi">WiFi</string>
    <string name="WiFi_success">WiFi success</string>
    <string name="WiFi_failed">WiFi failed</string>
    <string name="WiFi_scaning">WiFi scaning...</string>
    <string name="WiFi_info_closeing">WiFi closing...</string>
    <string name="WiFi_info_close">wifi has closed</string>
    <string name="WiFi_info_opening">wifi opening</string>
    <string name="WiFi_info_open">wifi has opened</string>
    <string name="WiFi_info_unknown">unknown status</string>
    <string name="WiFi_connecting">connecting...</string>
    <string name="WiFi_notfound_openap">Not found OpenAPN</string>
    <string name="HeadSet">HeadSet</string>
    <string name="HeadSet_plugged">HeadSet plugged</string>
    <string name="HeadSet_unplugged">HeadSet unplugged</string>
    <string name="HeadSet_tips">Please plugged HeadSet to test</string>
    <string name="HeadSet_hook">Press HeadSet_Hook button!</string>
    <string name="HeadSet_hook_message">Please make sure whether you can hang up duration making a call?</string>
    <string name="GPS">GPS</string>
    <string name="GPS_open">Please open GPS</string>
    <string name="GPS_connect">GPS opened, connecting...</string>
    <string name="GPS_normal">GPS normal</string>
    <string name="GPS_satelliteNum">GPS has been searching to the number of satellites:</string>
    <string name="GPS_Signal">GPS_Signal :</string>
    <string name="GPS_Success">GPS_Success</string>
    <string name="GPS_time">Time_consuming： %s 分</string>
    <string name="Sensor">Sensor</string>
    <string name="Vibrator">Vibrator</string>
    <string name="Signal">Phone</string>
    <string name="YGPS">YGPS</string>
    <string name="AGPS">AGPS</string>
    <string name="Microphone">Microphone</string>
    <string name="Mic_start">Mic start</string>
    <string name="Mic_stop">Mic stop</string>
    <string name="Mic_play">Mic play</string>
    <string name="Mic_operation">Mic operation</string>
    <string name="Speaker_operation">Speaker operation</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Bluetooth_open">Bluetooth opened</string>
    <string name="Bluetooth_opening">Bluetooth opening...</string>
    <string name="Bluetooth_scaning">Bluetooth scaning...</string>
    <string name="Bluetooth_mac">Bluetooth_mac:</string>
    <string name="Bluetooth_scan_success">Bluetooth_scan success</string>
    <string name="GSensor">Gravity sensor</string>
    <string name="GSensor_info">erect,flat,edge-on,observed gravity changes!</string>
    <string name="MSensor">Magnetic sensor</string>
    <string name="MSensor_default_text">Unknow data</string>
    <string name="MSensor_North">North</string>
    <string name="MSensor_East">East</string>
    <string name="MSensor_South">South</string>
    <string name="MSensor_West">West</string>
    <string name="MSensor_north_east">North_east</string>
    <string name="MSensor_south_east">South_east</string>
    <string name="MSensor_south_west">South_west</string>
    <string name="MSensor_north_west">North_west</string>
    <string name="LSensor">Light sensor</string>
    <string name="LSensor_default_text">Unknow data</string>
    <string name="LSensor_accuracy">Accuracy:</string>
    <string name="LSensor_value">Value:</string>
    <string name="LSensor_tips">In the light and dark place observe numerical changed!\nPlease cover the light sensor at least twice (less or equal 750 is normal)</string>
    <string name="LCD_increase">LCD_increase</string>
    <string name="LCD_weaken">LCD_weaken</string>
    <string name="Success">Success</string>
    <string name="Failed">Failed</string>
    <string name="psensor_hello">PSensor validation</string>
    <string name="psensor_app_name">Proximity sensor</string>
    <string name="proximity">proximity :</string>
    <string name="tips">Please place the hand and left the induction zone to watch the numerical changed!\nIf the sensor is normal the background color of the screen will be blue</string>
    <string name="Earphone">Earphone</string>
    <string name="battery_name">Power</string>
    <string name="touchscreen_name">TouchScreen</string>
    <string name="speaker_name">Speaker</string>
    <string name="wifi_name">WiFi</string>
    <string name="bluetooth_name">Bluetooth</string>
    <string name="headset_name">Headset</string>
    <string name="earphone_name">Earphone</string>
    <string name="gps_name">GPS</string>
    <string name="vibrator_name">Vibrator</string>
    <string name="telephone_name">Telephone</string>
    <string name="backlight_name">Backlight</string>
    <string name="memory_name">Memory</string>
    <string name="gsensor_name">Gravity sense</string>
    <string name="msensor_name">Magnetic sense</string>
    <string name="lsensor_name">Light sense</string>
    <string name="psensor_name">Proximity sense</string>
    <string name="camera_name">Back camera</string>
    <string name="hw_opening">Opening...</string>
    <string name="sdcard_name">T card</string>
    <string name="fmradio_name">FMRadio</string>
    <string name="KeyCode_name">KeyCode</string>
    <string name="lcd_name">LCD</string>
    <string name="sim_name">SIM card</string>
    <string name="microphone_name">Main Microphone</string>
    <string name="microphone_namesub">Sub Microphone</string>
    <string name="subcamera_name">Subcamera</string>
    <string name="headsethook_name">Headset hook</string>
    <string name="sdcard">T card</string>
    <string name="sdcard_tips_success">Detect SD card success</string>
    <string name="sdcard_tips_failed">Not find SD card</string>
    <string name="sdcard_totalsize">Totalsize:</string>
    <string name="sdcard_freesize">Freesize:</string>
    <string name="FMRadio">FMRadio</string>
    <string name="FMRadio_notice">Notice</string>
    <string name="KeyCode">KeyCode</string>
    <string name="KeyCode_info">Please press keycode</string>
    <string name="LCD">LCD</string>
    <string name="TeeInformation">TeeKeyInformation</string>
    <string name="TeeInformationExist">Exist</string>
    <string name="HardwareInformationExist">Exist</string>
    <string name="HardwareInformation">HardwareInformation</string>
    <string name="SimCard">SIM card</string>
    <string name="sim1_info_ok">SIM1:\nOK\n</string>
    <string name="sim1_info_failed">SIM1:\nFAILED\n</string>
    <string name="sim2_info_ok">SIM2:\nOK\n</string>
    <string name="sim2_info_failed">SIM2:\nFAILED\n</string>
    <string name="sim_info_ok">SIM:\nOK\n</string>
    <string name="sim_info_failed">SIM:\nFAILED\n</string>
    <string name="Report">Report</string>
    <string name="report_ok">Report ok:</string>
    <string name="report_failed">Report failed:</string>
    <string name="report_notest">Report notest:</string>
    <string name="menu_exit">Menu exit</string>
    <string name="Search">Search</string>
    <string name="MSensor_degree">°C</string>
    <string name="led_name">Flashlight</string>
    <string name="led_prev_name">FlashPrev</string>
    <string name="led_test_checkout_camera">Please check the camera</string>
    <string name="usb_memory">USB memory</string>
    <string name="internal_memory">Internal memory</string>
    <string name="version_information">Version information</string>
    <string name="x_coordinate">Xcoordinate:</string>
    <string name="y_coordinate">Ycoordinate:</string>
    <string name="z_coordinate">Zcoordinate:</string>
	<string name="channel1">Channel 1</string>
	<string name="channel2">Channel 2</string>
	<string name="channel3">Channel 3</string>
	<string name="channel4">Channel 4</string>
	<string name="channel5">Channel 5</string>
	<string name="channel6">Channel 6</string>
      <string name="version_ap">AP:I9500XXUAMDK</string>
    <string name="version_cp">CP:I9500XXUAMDK</string>
    <string name="version_csc">CSC:I9500OJVAMDK</string>
    <string name="AgingTest">AgingTest</string>
    <string name="AgingTest_ongoing">AgingTest is underway</string>
    <string name="AgingTest_attention">Note: Do not test the Mic and Speaker or Earphone at the same time!</string>
    <string name="flashlight_name">flashlight</string>
    <string name="View_results">View the results</string>
    <string name="Menu">Menu</string>
    <string name="Home">Home</string>
    <string name="Back">Back</string>
    <string name="Volume1">Volume +</string>
    <string name="Volume2">Volume -</string>
    <string name="z_result">Z：</string>
    <string name="y_result">Y：</string>
    <string name="x_result">X：</string>
	<string name="current_state">Current state:</string>
	<string name="otg_unstate">Not insert</string>
    <string name="HeadSet_hook_tips">Please press the Hook button on the headphone for testing!</string>
</resources>