<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="20.0dip" android:id="@id/mic_bt_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/HeadSet_tips" android:layout_weight="0.5" />
    </LinearLayout>
    <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.mediatek.factorymode.VUMeter android:id="@id/uvMeter" android:layout_width="150.0dp" android:layout_height="60.0dp" android:layout_centerInParent="true" />
    </RelativeLayout>
	<TextView android:id="@+id/ear_headset" android:text="@string/HeadSet_unplugged" style="@style/info_label" />
    <TextView android:id="@+id/tv_headset_hook" android:text="@string/HeadSet_hook_tips" style="@style/info_label" />
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center|bottom" >
        <Button android:textSize="25.0dip" android:id="@id/bt_ok" android:layout_width="140dp" android:layout_height="80dp" android:text="@string/Success" android:layout_alignParentBottom="true" 
        		android:layout_alignParentLeft="true" />
        <Button android:textSize="25.0dip" android:id="@id/bt_failed" android:layout_width="140dp" android:layout_height="80dp" android:text="@string/Failed" android:layout_alignParentBottom="true" 
        		android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
