<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout 
	android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:layout_alignParentTop="true">
     <LinearLayout 
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent" 
	    android:layout_height="50dp">
		  <TextView 
		      		android:id="@id/idchannel1" 
		      		android:textSize="30.0dip" 
					android:textStyle="bold" 
					android:textColor="@color/Green" 
					android:layout_weight="0.5" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:text="@string/channel1" />
		  <TextView 
		      		android:id="@id/idchannel2" 
		      		android:textSize="30.0dip" 
					android:textStyle="bold" 
					android:layout_weight="0.5" 
					android:textColor="@color/Green" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:text="@string/channel2" />
     </LinearLayout>
     
     <LinearLayout 
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent" 
	    android:layout_height="50dp">
			  <TextView 
			      		android:id="@id/idchannel3" 
			      		android:textSize="30.0dip" 
						android:textStyle="bold" 
						android:layout_weight="0.5" 
						android:textColor="@color/Green" 
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:text="@string/channel3" />
			  <TextView 
			      		android:id="@id/idchannel4"
			      		android:textSize="30.0dip" 
						android:textStyle="bold" 
						android:layout_weight="0.5" 
						android:textColor="@color/Green" 
						android:layout_width="wrap_content" 
						android:layout_height="wrap_content" 
						android:text="@string/channel4" />
     </LinearLayout>
     <LinearLayout 
	    android:orientation="horizontal" 
	    android:layout_width="fill_parent" 
	    android:layout_height="50dp">
		    <TextView 
		        	android:id="@id/idchannel5" 
		            android:textSize="30.0dip" 
					android:textStyle="bold" 
					android:layout_weight="0.5" 
					android:textColor="@color/Green" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:text="@string/channel5" />
		    <TextView 
		        	android:id="@id/idchannel6" 
		            android:textSize="30.0dip" 
					android:textStyle="bold" 
					android:layout_weight="0.5" 
					android:textColor="@color/Green" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:text="@string/channel6" />
     </LinearLayout>
     </LinearLayout>
    <LinearLayout 
	    android:orientation="vertical" 
	    android:layout_width="fill_parent" 
	    android:layout_height="200dp"
	    android:layout_alignParentBottom="true">
        <Button 
        android:id="@id/gbgtouch_bt_ok" 
        android:textSize="25.0dip" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/Success" 
        android:layout_weight="0.5" 
        android:background="#ff00ff00"/>
        <Button 
        android:id="@id/gbgtouch_bt_failed" 
        android:textSize="25.0dip" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="@string/Failed" 
        android:layout_weight="0.5" 
        android:background="#ffff0000"/>
    </LinearLayout>
</RelativeLayout>
