<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	android:id="@+id/psensor_layout"
  	xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0dip" 
	android:id="@id/proximity" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:layout_marginLeft="20.0dip" 
	android:layout_marginTop="30.0dip" 
	android:layout_marginRight="20.0dip" 
	android:text="@string/proximity" />
    <TextView android:textSize="20.0dip" 
	android:textColor="@color/Green" 
	android:id="@id/tips" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" 
	android:layout_marginLeft="20.0dip" 
	android:layout_marginTop="15.0dip" 
	android:layout_marginRight="20.0dip" 
	android:text="@string/tips" />
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center|bottom" >
        <Button android:textSize="25.0dip" 
		android:id="@id/psensor_bt_ok" 
		android:layout_width="140dp" 
		android:layout_height="80dp" 
		android:text="@string/Success" 
		android:layout_alignParentBottom="true" 
     android:layout_alignParentLeft="true" />
        <Button android:textSize="25.0dip" 
		android:id="@id/psensor_bt_failed" 
		android:layout_width="140dp" 
		android:layout_height="80dp" 
		android:text="@string/Failed" 
		 android:layout_alignParentBottom="true" 
    android:layout_alignParentRight="true"/>
     </RelativeLayout>
</LinearLayout>
