<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="20.0dip" android:id="@id/mic_bt_start" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Mic_start" android:layout_weight="0.5" />
    </LinearLayout>
    <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <com.mediatek.factorymode.VUMeter android:id="@id/uvMeter" android:layout_width="150.0px" android:layout_height="60.0px" android:layout_centerInParent="true" />
    </RelativeLayout>
    <TextView android:textSize="20.0dip" android:textColor="@color/Green" android:layout_gravity="center_horizontal" android:id="@id/mic_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Mic_operation" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="25.0dip" android:id="@id/mic_bt_ok" android:layout_width="fill_parent" android:layout_height="120.0dip" android:text="@string/Success" android:layout_weight="0.5" />
        <Button android:textSize="25.0dip" android:id="@id/mic_bt_failed" android:layout_width="fill_parent" android:layout_height="120.0dip" android:text="@string/Failed" android:layout_weight="0.5" />
    </LinearLayout>
    <TextView android:textSize="20.0dip" android:textColor="@color/Green" android:layout_gravity="center_horizontal" android:id="@id/mic_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Speaker_operation" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="25.0dip" android:id="@id/speaker_bt_ok" android:layout_width="fill_parent" android:layout_height="120.0dip" android:text="@string/Success" android:layout_weight="0.5" />
        <Button android:textSize="25.0dip" android:id="@id/speaker_bt_failed" android:layout_width="fill_parent" android:layout_height="120.0dip" android:text="@string/Failed" android:layout_weight="0.5" />
    </LinearLayout>
</LinearLayout>
