<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView
			android:layout_height="wrap_content"
			android:id="@+id/txt_value_otg"
			android:layout_width="match_parent"
			android:textSize="25.0dip" 
			android:gravity="center"/>
		</LinearLayout>
		<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textSize="22.0dip" 
			android:textColor="@color/Green"
		 android:text="@string/current_state" />
		 <TextView
			android:layout_height="wrap_content"
			android:id="@+id/value_otg"
			android:layout_width="wrap_content"
			android:textSize="22.0dip" 
			android:textColor="@color/Red" 
			android:text="@string/otg_unstate"/>
		</LinearLayout>
			<RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center|bottom" >
        <Button 
            android:textSize="25.0dip" 
            android:id="@+id/otg_bt_ok" 
            android:layout_width="140dp" 
            android:layout_height="80dp" 
            android:text="@string/Success" 
            android:layout_alignParentBottom="true" 
        	android:layout_alignParentLeft="true" />
            
        <Button android:textSize="25.0dip" 
            android:id="@+id/otg_bt_failed" 
            android:layout_width="140dp" 
            android:layout_height="80dp" 
            android:text="@string/Failed" 
             android:layout_alignParentBottom="true" 
            android:layout_alignParentRight="true"/>
          </RelativeLayout>     

</LinearLayout>
<!--Demand:MMI modify(end) add hall test in factorymode by zmj 2017/08/29-->