<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <Button android:textSize="30.0sp" 
        android:id="@+id/fm_search" 
        android:layout_width="fill_parent" 
        android:layout_height="100.0dip" 
        android:background="@drawable/btn_default"
        android:textColor="#000000"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip" 
        android:text="@string/Search" />
    <Button android:textSize="30.0sp" 
        android:id="@+id/fm_success" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:background="@drawable/btn_default"
        android:textColor="#000000" 
        android:text="@string/Success"
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"  
        android:layout_weight="1.0" />
    <Button android:textSize="30.0sp" 
        android:id="@+id/fm_fail" 
        android:layout_width="fill_parent" 
        android:layout_height="100.0dip" 
        android:background="@drawable/btn_default"
        android:textColor="#000000"         
        android:layout_marginTop="8dip"
        android:layout_marginBottom="8dip"  
        android:text="@string/Failed" />  

</LinearLayout>
